2002-06-15  Maciej Stachowiak  <mjs@apple.com>

	Removed product and vendor properties, thereby fixing:
        
        Radar 2943751 - JavaScript navigator.product property is "Konqueror/khtml"
        Radar 2943753 - JavaScript navigator.vendor property is "KDE"
        
        * khtml/ecma/kjs_navigator.cpp:
	(Navigator::getValueProperty): Return undefined for the above mentioned properties.

2002-06-15  Maciej Stachowiak  <mjs@apple.com>

        Implemented functionality needed for missing Screen properties, thereby fixing the following
        bugs:
        
        Radar 2943730 - JavaScript screen.availHeight property is not implemented
        Radar 2943732 - JavaScript screen.availLeft property is not implemented
        Radar 2943734 - JavaScript screen.availTop property not implemented
        Radar 2943735 - JavaScript screen.availWidth property is not implemented
        
	* kwq/KWQKWinModule.mm:
	(KWinModule::workArea): Return the correct screen size to fix the above bugs.

2002-06-14  Richard Williamson  <rjw@apple.com>

    Changed IFResourceProgressHandler to pass back resource handle instead of
    string description.  This will address the needs descibed in 2954160.

	* kwq/KWQKloader.mm:
	(-[KWQURLLoadClient IFURLHandleResourceDidBeginLoading:]):
	(-[KWQURLLoadClient IFURLHandleResourceDidCancelLoading:]):
	(-[KWQURLLoadClient IFURLHandleResourceDidFinishLoading:data:]):
	(-[KWQURLLoadClient IFURLHandle:resourceDataDidBecomeAvailable:]):
	(-[KWQURLLoadClient IFURLHandle:resourceDidFailLoadingWithResult:]):
	(-[KWQURLLoadClient IFURLHandle:didRedirectToURL:]):
	(KWQLoaderImpl::serveRequest):
	* kwq/external.h:

2002-06-14  Darin Adler  <darin@apple.com>

	* kwq/KWQDateTime.mm: Add ifdefs needed to make Deployment build compile.

2002-06-14  Darin Adler  <darin@apple.com>

	Worked on eliminating calls to WebKit. About 3/4 done.

	* WebCore.exp: Export new WebCoreBridge class, fewer other things.
